# SpecPrint

./: SpecPrint.cabal
src/Text/: SpecPrint.hs
